src/scss/_variables.scss
$allow-dark-theme: true;
$force-dark-theme: false;

$highlight-primary: #4c6dff;
$highlight-primary-dark: #ff9900;
//$secondary-color: #ff9900;
//$secondary-hover: #ff8800;
$gatsby-color: #663399;

$bg-primary: #fff;
$bg-primary-dark: #191919;

$bg-secondary: #efefef;
$bg-secondary-dark: #252525;

$title-primary: #444;
$title-primary-dark: #ddd;

$copy-primary: #666;
$copy-primary-dark: #fff;

$border-primary: #EBEBEB;
$border-secondary: #ABABAB;
$transition-fast: 0.4s;

$ipad-port: 767px;
$phone-port: 450px;

@mixin inherit-link {
    @include link-color(inherit);
}

@mixin link-color($color) {
    &, &:visited, &:hover, &:active {
        color: $color;
    }
}

@mixin media($max-width) {
    @media screen and (max-width: $max-width) {
        @content;
    }
}

@mixin theme-dark {
    @if $force-dark-theme {
        @content
    }
    @else if $allow-dark-theme {
        html[data-theme='dark'] & {
            @content;
        }
        /* @media (prefers-color-scheme: dark) {
            @content;
        } */
    }
}

@mixin property-dark($property, $value-light, $value-dark) {
    #{$property}: $value-light;

    @include theme-dark {
        #{$property}: $value-dark;
    }
}
%bg-primary {
    @include property-dark("background-color", $bg-primary, $bg-primary-dark);
}

%bg-secondary {
    @include property-dark("background-color", $bg-secondary, $bg-secondary-dark);
}

%title-text {
    @include property-dark("color", $title-primary, $title-primary-dark);
}

%copy-text {
    @include property-dark("color", $copy-primary, $copy-primary-dark);
}

